--- a/exe22/index6.html
+++ b/exe22/index6.html
@@ -8,15 +8,22 @@
     <style>
         body{
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: scroll;
+
+            /*Shorhand - background
+             color > image > position > repeat >[size] > attachment
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,6 +34,42 @@
 <body>
     <main>
         <h1>Teste de imagem de fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
+            Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Impedit nobis voluptatibus laudantium cumque dolorum placeat doloribus repudiandae explicabo! 
             Debitis quod vero dignissimos cupiditate aliquam repellendus ratione ex laboriosam incidunt autem?
