--- a/exe23-DesafioSite/index.html
+++ b/exe23-DesafioSite/index.html
@@ -14,11 +14,11 @@
                 Cordel Moderno
             </h1>
             <p>
-                <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Por Milton Duarte</a>
+                Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
             </p>
         </header>
-        <article>
-            <section>
+
+            <section class="normal">
                 <p>
                     Da tal tecnologia <br>
                     Só se fala por e-mail <br>
@@ -28,7 +28,8 @@
                     Vou dizer tudo em poesia. <br>
                 </p>
             </section>
-            <section>
+
+            <section class="imagem">
                 <p>
                     Não é mais como era antes <br>
                     É tudo abreviado <br>
@@ -39,7 +40,8 @@
                     E um coração desenhado. <br>
                 </p>
             </section>
-            <section>
+
+            <section class="normal">
                 <p>
                     Arroba agora não pesa <br>
                     É parte de um endereço <br>
@@ -59,7 +61,8 @@
                     Decifre esse rabisco. <br>
                 </p>
             </section>
-            <section>
+
+            <section class="imagem">
                 <p>
                     Tenho saudade das cartas <br>
                     Escritas com a própria mão <br>
@@ -70,7 +73,8 @@
                     Nas linhas do coração. <br>
                 </p>
             </section>
-            <section>
+
+            <section class="normal">
                 <p>
                     Agora, escrevo e envio <br>
                     Chegando na mesma hora <br>
@@ -90,7 +94,7 @@
                     Deixe que Deus interprete. <br>
                 </p>
             </section>
-        </article>
+
         <footer>
             <p>
                 Site criado por <a href="https://github.com/ThiagoCosta010" target="_blank">Thiago Costa</a> para o CursoEmVideo
