--- a/exe24/tabela2.html
+++ b/exe24/tabela2.html
@@ -27,6 +27,13 @@
             background-color: #383838;
             color: white;
         }
+        tbody > tr:nth-child(even){
+            background-color: rgb(151, 134, 134);
+        }
+        tbody > tr:nth-child(odd){ /*2n = de dois em dois//  odd = impar  even = par*/
+            background-color: lightgray;
+
+        }
         td.num{
             text-align: right;
         }
