--- a/exe24/tabela2.html
+++ b/exe24/tabela2.html
@@ -12,6 +12,7 @@
         table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th{
             border: 1px solid black;
@@ -22,6 +23,11 @@
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
         }
         thead, tfoot{
             background-color: #383838;
@@ -93,7 +99,6 @@
             </tr>
 
         </tfoot>
-    </table>
-    
+    </table>    
 </body>
 </html>
