--- a/exe30/iframe3.html
+++ b/exe30/iframe3.html
@@ -35,7 +35,9 @@
         Eveniet veritatis molestiae unde, similique sint 
         soluta omnis expedita beatae sequi, deleniti, ullam veniam!
     </p>
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet, 
+        consectetur adipisicing elit. Impedit maxime, quia deleniti similique numquam omnis quidem! 
+        Eveniet veritatis molestiae unde, similique sint soluta omnis expedita beatae sequi, deleniti, ullam veniam!.</p> src='' ">
         <p>Seu navegador não é compatível</p>
     </iframe>
 
