--- a/exe31-projeto/index.html
+++ b/exe31-projeto/index.html
@@ -11,10 +11,18 @@
 <body>
      <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compativel com o iframe
+            </iframe>
 
         </section>
         <section id="redes-sociais">
+            <a href="#" target="tela"><img src="img/logo-home.jpg" alt="home"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-github.jpg" alt="github"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="#" target="tela"><img src="img/logo-facebook.jpg" alt="facebook"></a>
 
         </section>
      </main>
