--- a/exe31-projeto/index.html
+++ b/exe31-projeto/index.html
@@ -17,12 +17,12 @@
 
         </section>
         <section id="redes-sociais">
-            <a href="#" target="tela"><img src="img/logo-home.jpg" alt="home"></a> <br>
-            <a href="#" target="tela"><img src="img/logo-youtube.jpg" alt="youtube"></a> <br>
-            <a href="#" target="tela"><img src="img/logo-github.jpg" alt="github"></a> <br>
-            <a href="#" target="tela"><img src="img/logo-instagram.jpg" alt="instagram"></a> <br>
-            <a href="#" target="tela"><img src="img/logo-twitter.jpg" alt="twitter"></a> <br>
-            <a href="#" target="tela"><img src="img/logo-facebook.jpg" alt="facebook"></a>
+            <a href="home.html" target="tela"><img src="img/logo-home.jpg" alt="home"></a> <br>
+            <a href="redesSociais/youtube.html" target="tela"><img src="img/logo-youtube.jpg" alt="youtube"></a> <br>
+            <a href="redesSociais/github.html" target="tela"><img src="img/logo-github.jpg" alt="github"></a> <br>
+            <a href="redesSociais/instagram.html" target="tela"><img src="img/logo-instagram.jpg" alt="instagram"></a> <br>
+            <a href="redesSociais/twitter.html" target="tela"><img src="img/logo-twitter.jpg" alt="twitter"></a> <br>
+            <a href="redesSociais/facebook.html" target="tela"><img src="img/logo-facebook.jpg" alt="facebook"></a>
 
         </section>
      </main>
