--- a/exe33/mq004/index.html
+++ b/exe33/mq004/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
+    <main>
+        <h1>Testando Media Query</h1>
+        <img id="phone" src="img/icon-phone.png" alt="acessando via smartphone">
+        <img id="table" src="img/icon-tablet.png" alt="acessando via table">
+        <img id="print" src="img/icon-print.png" alt="versao para impressão">
+        <img id="pc" src="img/icon-pc.png" alt="versao desktop">
+        <img id="tv" src="img/icon-tv.png" alt="versao tv">
+    </main>
     
 </body>
 </html>
