--- a/exe33/mq004/index.html
+++ b/exe33/mq004/index.html
@@ -12,7 +12,7 @@
     <main>
         <h1>Testando Media Query</h1>
         <img id="phone" src="img/icon-phone.png" alt="acessando via smartphone">
-        <img id="table" src="img/icon-tablet.png" alt="acessando via table">
+        <img id="tablet" src="img/icon-tablet.png" alt="acessando via tablet">
         <img id="print" src="img/icon-print.png" alt="versao para impressão">
         <img id="pc" src="img/icon-pc.png" alt="versao desktop">
         <img id="tv" src="img/icon-tv.png" alt="versao tv">
