--- a/exe33/mq005/index.html
+++ b/exe33/mq005/index.html
@@ -10,49 +10,53 @@
 <body>
     <header>
         <h1>Meu Site</h1>
-        <ul>
-            <li><a href="#">Opção 1</a></li>
-            <li><a href="#">Opção 2</a></li>
-            <li><a href="#">Opção 3</a></li>
-            <li><a href="#">Opção 4</a></li>
-            <li><a href="#">Opção 5</a></li>
-        </ul>
+        <menu>
+            <ul>
+                <li><a href="#">Opção 1</a></li>
+                <li><a href="#">Opção 2</a></li>
+                <li><a href="#">Opção 3</a></li>
+                <li><a href="#">Opção 4</a></li>
+                <li><a href="#">Opção 5</a></li>
+            </ul>
+        </menu>
     </header>
     <main>
-        <h1>Testando Media Queries</h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-            Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis. 
-            Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
-        </p>
+        <article>
+            <h2>Testando Media Queries</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Voluptatibus id illo nemo, ut debitis tempora praesentium quibusdam natus veritatis.
+                Veniam laudantium nostrum blanditiis vitae sunt ipsa, quo delectus. Iste, nostrum!
+            </p>
+        </article>
 
     </main>
     
